# watchie

./: .gitconfig  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
docs/: AGENT.md  GEMINI.md  IDENTITY.md  MEMORY.md  SOUL.md
docs/wiki/: agent-sop.md  architecture.md  development.md  hygiene.md  index.md
src/: main.rs
src/cli/: commands.rs  mod.rs
src/config/: mod.rs
src/downloader/: mod.rs
src/imdb/: mod.rs
src/kitty/: mod.rs
src/player/: mod.rs
src/playimdb/: mod.rs
src/tui/: app.rs  events.rs  mod.rs  render.rs  theme.rs  widgets.rs
